# superglue

./: Cargo.toml  README.md  bufcat.py  superglue.py
.github/workflows/: ci.yml
src/: main.rs
