[package]
name = "superglue"
version = "0.0.4"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/VHSgunzo/superglue"
description = "Tool for write a small file to the beginning of a large file in place"

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
strip = "symbols"
codegen-units = 1
